traefik/07-middlewares.yml
apiVersion: v1
kind: Namespace
metadata:
  name: middleware
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-only
  namespace: middleware
  labels:
    expose: all
spec:
  redirectScheme:
    permanent: true
    scheme: https
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: security-headers
  namespace: middleware
  labels:
    expose: all
spec:
  headers:
    frameDeny: true
    sslRedirect: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: secured
  namespace: middleware
  labels:
    expose: all
spec:
  chain:
    middlewares:
      - name: security-headers
        namespace: middleware
      - name: https-only
        namespace: middleware

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: internal-ips-only
  namespace: middleware
  labels:
    expose: all
spec:
  ipWhiteList:
    sourceRange:
      - 192.168.1.0/24   # Internal lan
      - 172.16.16.0/24   # Internal lan
      - 192.168.10.0/24  # MetalLB network
      - 172.16.17.0/24   # MetalLB network
      - 10.200.100.0/24  # Wireguard
      - 127.0.0.1/16     # Localhost
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: local-basic-auth
  namespace: middleware
  labels:
    expose: all
spec:
  basicAuth:
    secret: htpasswd
    realm: elee.cloud
    removeHeader: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: secured-local
  namespace: middleware
  labels:
    expose: all
spec:
  chain:
    middlewares:
      - name: security-headers
        namespace: middleware
      - name: internal-ips-only
        namespace: middleware
      - name: local-basic-auth
        namespace: middleware
      - name: https-only
        namespace: middleware
