traefik/02-traefik-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: default
  name: traefik
  namespace: infra
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.10.2
  ports:
    - protocol: TCP
      name: web
      port: 80
    - protocol: TCP
      name: admin
      port: 8080
    - protocol: TCP
      name: websecure
      port: 443
  selector:
    app: traefik
