traefik/05-ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-route-redirect
  namespace: infra
  labels:
    app: traefik
    expose: internal
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.k8s.elee.cloud`)
      kind: Rule
      services:
        - name: traefik
          port: 8080
      middlewares:
        - name: secured-local
          namespace: middleware
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-route
  namespace: infra
  labels:
    app: traefik
    expose: internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.k8s.elee.cloud`)
      kind: Rule
      services:
      - name: traefik
        port: 8080
      middlewares:
        - name: secured-local
          namespace: middleware
  tls:
    certResolver: namecheap
    options:
      name: default
      namespace: infra
